# Budget-Analysis-Project

./: README.md
backend/: app.db  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1a04d6d63b31_update_models.py  9a00191ed1e4_added_initialization_and_models.py  e90537eae38d_add_date_and_time.py
backend/api/v1/: api.py
backend/api/v1/routes/: __init__.py  expense.py  health.py  income.py  income_categories.py  transactions.py
backend/api_testing_budget_analysis_project/: create expense.bru  create income.bru  update expense.bru  update income.bru
backend/core/: status_codes.py
backend/database/: __init__.py  seed.py  session.py
backend/dependencies/: __init__.py  database.py
backend/models/: Budget.py  Credential.py  Expense.py  ExpenseCategory.py  Income.py  Role.py  User.py  __init__.py  budget.py  credential.py  expense.py  expense_category.py  income.py  income_category.py  role.py  user.py
backend/repositories/: __init__.py  expense_repository.py  income_category_repository.py  income_repository.py
backend/schemas/: __init__.py  expense.py  income.py  income_category.py  transaction.py
backend/scripts/: check.sh
backend/services/: __init__.py  expense_category_service.py  expense_service.py  income_category_service.py  income_service.py  transaction_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Sidebar.jsx  Transaction.jsx  TransactionForm.jsx  TransactionsList.jsx
frontend/src/pages/: CreateIncome.jsx
frontend/src/services/: expenseService.js  (+4 more)
(+3 files in other folders)
