[tool.poetry]
name = "backend"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.14"
fastapi = "^0.135.1"
uvicorn = "^0.42.0"
sqlalchemy = "^2.0.48"
aiosqlite = "^0.22.1"


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
ruff = "^0.15.6"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "F", "I"]
